# llm-eval

./: .gitignore  README.md  cml.md  dag.md  data.dvc  dummy-evaluation.py  dvc.md  dvc.yaml  gpu-info.md  params.yaml  pyproject.toml  ragas.md  requirements.txt  run-experiments.sh  setup-venv.sh  test-pipeline.sh  vllm.md
.dvc/: config
.github/workflows/: cml.yaml
data/: .gitignore  evaluation-sets.dvc  synthetic-datasets.dvc
data/evaluation-sets/: eidc-eval-sample.csv  eidc-eval.csv
data/synthetic-datasets/: eidc_rag_test_set.csv
notebooks/: ragas_eval.ipynb  ragas_synth.ipynb  unslothai_test.ipynb  vllm_test.ipynb
prompts/: synth-eval.txt
scripts/: chunk_data.py  create_embeddings.py  evaluate.py  evaluate_synthetic_testset.py  extract_metadata.py  fetch_eidc_metadata.py  fetch_supporting_docs.py  generate_synthetic_testset.py  prepare_data.py  run_rag_pipeline.py  upload_to_docstore.py
src/llm_eval/: fetch_data.py  prepare_data.py
