[project]
name = "llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.0.0",
    "bitsandbytes==0.44.1",
    "chroma-haystack==0.18.0",
    "chromadb==0.5.3",
    "dvc[s3]==3.2.0",
    "haystack-ai==2.2.3",
    "kaleido==0.2.1",
    "langchain==0.2.7",
    "nbformat==5.10.4",
    "nltk==3.8.1",
    "ollama-haystack==0.0.7",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "pygit2==1.14.1",
    "pysqlite3-binary==0.5.4",
    "ragas==0.1.10",
    "ruff>=0.8.3",
    "sentence-transformers==3.0.1",
    "tool>=0.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.ruff.lint]
select = [
    "I"
]